Added account iconset

--- a/demo/index.html
+++ b/demo/index.html
@@ -24,6 +24,32 @@
     <div class="vertical-section-container">
       <h3>Basic mdi-iconset-svg demo</h3>
 
+      <h2>Account</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-account:account"></iron-icon>
+          <iron-icon icon="mdi-account:account-alert"></iron-icon>
+          <iron-icon icon="mdi-account:account-box"></iron-icon>
+          <iron-icon icon="mdi-account:account-box-outline"></iron-icon>
+          <iron-icon icon="mdi-account:account-check"></iron-icon>
+          <iron-icon icon="mdi-account:account-circle"></iron-icon>
+          <iron-icon icon="mdi-account:account-key"></iron-icon>
+          <iron-icon icon="mdi-account:account-location"></iron-icon>
+          <iron-icon icon="mdi-account:account-minus"></iron-icon>
+          <iron-icon icon="mdi-account:account-multiple"></iron-icon>
+          <iron-icon icon="mdi-account:account-mutiple-outline"></iron-icon>
+          <iron-icon icon="mdi-account:account-mutiple-plus"></iron-icon>
+          <iron-icon icon="mdi-account:account-network"></iron-icon>
+          <iron-icon icon="mdi-account:account-outline"></iron-icon>
+          <iron-icon icon="mdi-account:account-plus"></iron-icon>
+          <iron-icon icon="mdi-account:account-remove"></iron-icon>
+          <iron-icon icon="mdi-account:account-search"></iron-icon>
+          <iron-icon icon="mdi-account:account-star"></iron-icon>
+          <iron-icon icon="mdi-account:clipboard-account"></iron-icon>
+          <iron-icon icon="mdi-account:orbit"></iron-icon>
+        </template>
+      </demo-snippet>
+
       <h2>Logo</h2>
       <demo-snippet>
         <template>
