Added action iconset

--- a/demo/index.html
+++ b/demo/index.html
@@ -50,6 +50,126 @@
         </template>
       </demo-snippet>
 
+      <h2>Action</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-action:airplane"></iron-icon>
+          <iron-icon icon="mdi-action:airplane-off"></iron-icon>
+          <iron-icon icon="mdi-action:arrange-bring-forward"></iron-icon>
+          <iron-icon icon="mdi-action:arrange-bring-to-front"></iron-icon>
+          <iron-icon icon="mdi-action:arrange-send-backward"></iron-icon>
+          <iron-icon icon="mdi-action:arrange-send-to-back"></iron-icon>
+          <iron-icon icon="mdi-action:arrow-down"></iron-icon>
+          <iron-icon icon="mdi-action:arrow-left"></iron-icon>
+          <iron-icon icon="mdi-action:arrow-right"></iron-icon>
+          <iron-icon icon="mdi-action:arrow-up"></iron-icon>
+          <iron-icon icon="mdi-action:bookmark"></iron-icon>
+          <iron-icon icon="mdi-action:bookmark-outline"></iron-icon>
+          <iron-icon icon="mdi-action:border-all"></iron-icon>
+          <iron-icon icon="mdi-action:border-bottom"></iron-icon>
+          <iron-icon icon="mdi-action:border-color"></iron-icon>
+          <iron-icon icon="mdi-action:border-horizontal"></iron-icon>
+          <iron-icon icon="mdi-action:border-inside"></iron-icon>
+          <iron-icon icon="mdi-action:border-left"></iron-icon>
+          <iron-icon icon="mdi-action:border-none"></iron-icon>
+          <iron-icon icon="mdi-action:border-outside"></iron-icon>
+          <iron-icon icon="mdi-action:border-right"></iron-icon>
+          <iron-icon icon="mdi-action:border-top"></iron-icon>
+          <iron-icon icon="mdi-action:border-vertical"></iron-icon>
+          <iron-icon icon="mdi-action:briefcase"></iron-icon>
+          <iron-icon icon="mdi-action:camcorder"></iron-icon>
+          <iron-icon icon="mdi-action:camcorder-box"></iron-icon>
+          <iron-icon icon="mdi-action:camcorder-box-off"></iron-icon>
+          <iron-icon icon="mdi-action:camcorder-off"></iron-icon>
+          <iron-icon icon="mdi-action:check"></iron-icon>
+          <iron-icon icon="mdi-action:check-all"></iron-icon>
+          <iron-icon icon="mdi-action:closed-caption"></iron-icon>
+          <iron-icon icon="mdi-action:compass"></iron-icon>
+          <iron-icon icon="mdi-action:credit-card"></iron-icon>
+          <iron-icon icon="mdi-action:download"></iron-icon>
+          <iron-icon icon="mdi-action:exit-to-app"></iron-icon>
+          <iron-icon icon="mdi-action:eye"></iron-icon>
+          <iron-icon icon="mdi-action:eye-off"></iron-icon>
+          <iron-icon icon="mdi-action:fast-forward"></iron-icon>
+          <iron-icon icon="mdi-action:film"></iron-icon>
+          <iron-icon icon="mdi-action:filmstrip"></iron-icon>
+          <iron-icon icon="mdi-action:filter"></iron-icon>
+          <iron-icon icon="mdi-action:filter-outline"></iron-icon>
+          <iron-icon icon="mdi-action:filter-remove"></iron-icon>
+          <iron-icon icon="mdi-action:filter-remove-outline"></iron-icon>
+          <iron-icon icon="mdi-action:flip-to-back"></iron-icon>
+          <iron-icon icon="mdi-action:flip-to-front"></iron-icon>
+          <iron-icon icon="mdi-action:format-color-fill"></iron-icon>
+          <iron-icon icon="mdi-action:google"></iron-icon>
+          <iron-icon icon="mdi-action:google-plus"></iron-icon>
+          <iron-icon icon="mdi-action:heart"></iron-icon>
+          <iron-icon icon="mdi-action:heart-box"></iron-icon>
+          <iron-icon icon="mdi-action:heart-outline"></iron-icon>
+          <iron-icon icon="mdi-action:history"></iron-icon>
+          <iron-icon icon="mdi-action:home"></iron-icon>
+          <iron-icon icon="mdi-action:human"></iron-icon>
+          <iron-icon icon="mdi-action:information"></iron-icon>
+          <iron-icon icon="mdi-action:information-outline"></iron-icon>
+          <iron-icon icon="mdi-action:invert-colors"></iron-icon>
+          <iron-icon icon="mdi-action:label"></iron-icon>
+          <iron-icon icon="mdi-action:label-outline"></iron-icon>
+          <iron-icon icon="mdi-action:launch"></iron-icon>
+          <iron-icon icon="mdi-action:link"></iron-icon>
+          <iron-icon icon="mdi-action:lock"></iron-icon>
+          <iron-icon icon="mdi-action:lock-open"></iron-icon>
+          <iron-icon icon="mdi-action:lock-open-outline"></iron-icon>
+          <iron-icon icon="mdi-action:lock-outline"></iron-icon>
+          <iron-icon icon="mdi-action:magnify"></iron-icon>
+          <iron-icon icon="mdi-action:magnify-minus"></iron-icon>
+          <iron-icon icon="mdi-action:magnify-plus"></iron-icon>
+          <iron-icon icon="mdi-action:map-marker"></iron-icon>
+          <iron-icon icon="mdi-action:map-marker-off"></iron-icon>
+          <iron-icon icon="mdi-action:microphone"></iron-icon>
+          <iron-icon icon="mdi-action:microphone-off"></iron-icon>
+          <iron-icon icon="mdi-action:microphone-outline"></iron-icon>
+          <iron-icon icon="mdi-action:microphone-settings"></iron-icon>
+          <iron-icon icon="mdi-action:minus"></iron-icon>
+          <iron-icon icon="mdi-action:minus-box"></iron-icon>
+          <iron-icon icon="mdi-action:minus-circle"></iron-icon>
+          <iron-icon icon="mdi-action:minus-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-action:newspaper"></iron-icon>
+          <iron-icon icon="mdi-action:pause"></iron-icon>
+          <iron-icon icon="mdi-action:pause-circle"></iron-icon>
+          <iron-icon icon="mdi-action:pause-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-action:pencil"></iron-icon>
+          <iron-icon icon="mdi-action:pin"></iron-icon>
+          <iron-icon icon="mdi-action:play"></iron-icon>
+          <iron-icon icon="mdi-action:play-circle"></iron-icon>
+          <iron-icon icon="mdi-action:play-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-action:plus"></iron-icon>
+          <iron-icon icon="mdi-action:plus-box"></iron-icon>
+          <iron-icon icon="mdi-action:plus-circle"></iron-icon>
+          <iron-icon icon="mdi-action:plus-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-action:puzzle"></iron-icon>
+          <iron-icon icon="mdi-action:quality-high"></iron-icon>
+          <iron-icon icon="mdi-action:receipt"></iron-icon>
+          <iron-icon icon="mdi-action:refresh"></iron-icon>
+          <iron-icon icon="mdi-action:rewind"></iron-icon>
+          <iron-icon icon="mdi-action:settings"></iron-icon>
+          <iron-icon icon="mdi-action:settings-box"></iron-icon>
+          <iron-icon icon="mdi-action:skip-next"></iron-icon>
+          <iron-icon icon="mdi-action:skip-previous"></iron-icon>
+          <iron-icon icon="mdi-action:stop"></iron-icon>
+          <iron-icon icon="mdi-action:store"></iron-icon>
+          <iron-icon icon="mdi-action:swap-horizontal"></iron-icon>
+          <iron-icon icon="mdi-action:swap-vertical"></iron-icon>
+          <iron-icon icon="mdi-action:tab"></iron-icon>
+          <iron-icon icon="mdi-action:tab-unselected"></iron-icon>
+          <iron-icon icon="mdi-action:tag"></iron-icon>
+          <iron-icon icon="mdi-action:thumb-up"></iron-icon>
+          <iron-icon icon="mdi-action:thumb-down"></iron-icon>
+          <iron-icon icon="mdi-action:upload"></iron-icon>
+          <iron-icon icon="mdi-action:voicemail"></iron-icon>
+          <iron-icon icon="mdi-action:web"></iron-icon>
+          <iron-icon icon="mdi-action:youtube-play"></iron-icon>
+        </template>
+      </demo-snippet>
+
       <h2>Logo</h2>
       <demo-snippet>
         <template>
