--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -1,2 +1,3 @@
 <link rel="import" href="mdi-account-iconset-svg.html">
+<link rel="import" href="mdi-action-iconset-svg.html">
 <link rel="import" href="mdi-logo-iconset-svg.html">
