Added agriculture iconset

--- a/demo/index.html
+++ b/demo/index.html
@@ -170,6 +170,15 @@
         </template>
       </demo-snippet>
 
+      <h2>Agriculture</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-agriculture:cow"></iron-icon>
+          <iron-icon icon="mdi-agriculture:duck"></iron-icon>
+          <iron-icon icon="mdi-agriculture:pig"></iron-icon>
+        </template>
+      </demo-snippet>
+
       <h2>Logo</h2>
       <demo-snippet>
         <template>
