--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -1,3 +1,4 @@
 <link rel="import" href="mdi-account-iconset-svg.html">
 <link rel="import" href="mdi-action-iconset-svg.html">
+<link rel="import" href="mdi-agriculture-iconset-svg.html">
 <link rel="import" href="mdi-logo-iconset-svg.html">
