Added alert iconset

--- a/demo/index.html
+++ b/demo/index.html
@@ -179,6 +179,20 @@
         </template>
       </demo-snippet>
 
+      <h2>Alert</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-alert:account-alert"></iron-icon>
+          <iron-icon icon="mdi-alert:alert"></iron-icon>
+          <iron-icon icon="mdi-alert:alert-box"></iron-icon>
+          <iron-icon icon="mdi-alert:alert-circle"></iron-icon>
+          <iron-icon icon="mdi-alert:battery-alert"></iron-icon>
+          <iron-icon icon="mdi-alert:clipboard-alert"></iron-icon>
+          <iron-icon icon="mdi-alert:disk-alert"></iron-icon>
+          <iron-icon icon="mdi-alert:message-alert"></iron-icon>
+        </template>
+      </demo-snippet>
+
       <h2>Logo</h2>
       <demo-snippet>
         <template>
