--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -1,4 +1,5 @@
 <link rel="import" href="mdi-account-iconset-svg.html">
 <link rel="import" href="mdi-action-iconset-svg.html">
 <link rel="import" href="mdi-agriculture-iconset-svg.html">
+<link rel="import" href="mdi-alert-iconset-svg.html">
 <link rel="import" href="mdi-logo-iconset-svg.html">
