Added arrange iconset

--- a/demo/index.html
+++ b/demo/index.html
@@ -193,6 +193,18 @@
         </template>
       </demo-snippet>
 
+      <h2>Arrange</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-arrange:arrange-bring-forward"></iron-icon>
+          <iron-icon icon="mdi-arrange:arrange-bring-to-front"></iron-icon>
+          <iron-icon icon="mdi-arrange:arrange-send-backward"></iron-icon>
+          <iron-icon icon="mdi-arrange:arrange-send-to-back"></iron-icon>
+          <iron-icon icon="mdi-arrange:flip-to-back"></iron-icon>
+          <iron-icon icon="mdi-arrange:flip-to-front"></iron-icon>
+        </template>
+      </demo-snippet>
+
       <h2>Logo</h2>
       <demo-snippet>
         <template>
