Added arrow iconset

--- a/demo/index.html
+++ b/demo/index.html
@@ -205,6 +205,32 @@
         </template>
       </demo-snippet>
 
+      <h2>Arrow</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-arrow:arrow-down"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-down-bold-circle"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-down-bold-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-down-thick"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-left"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-left-bold-circle"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-left-bold-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-left-thick"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-right"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-right-bold-circle"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-right-bold-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-right-thick"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-up"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-up-bold-circle"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-up-bold-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-arrow:arrow-up-thick"></iron-icon>
+          <iron-icon icon="mdi-arrow:clipboard-arrow-down"></iron-icon>
+          <iron-icon icon="mdi-arrow:clipboard-arrow-left"></iron-icon>
+          <iron-icon icon="mdi-arrow:swap-horizontal"></iron-icon>
+          <iron-icon icon="mdi-arrow:swap-vertical"></iron-icon>
+        </template>
+      </demo-snippet>
+
       <h2>Logo</h2>
       <demo-snippet>
         <template>
