--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -3,4 +3,5 @@
 <link rel="import" href="mdi-agriculture-iconset-svg.html">
 <link rel="import" href="mdi-alert-iconset-svg.html">
 <link rel="import" href="mdi-arrange-iconset-svg.html">
+<link rel="import" href="mdi-arrow-iconset-svg.html">
 <link rel="import" href="mdi-logo-iconset-svg.html">
