--- a/mdi-arrow-iconset-svg.html
+++ b/mdi-arrow-iconset-svg.html
@@ -5,7 +5,7 @@ Material design: [Icons](https://material.io/guidelines/style/icons.html)
 
 Example:
 
-    <iron-icon icon="mdi-arrow:flip-to-front"></iron-icon>
+    <iron-icon icon="mdi-arrow:arrow-left"></iron-icon>
 
 @pseudoElement mdi-arrow-iconset-svg
 @demo demo/index.html 
