Added audio, auth and av iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -231,6 +231,48 @@
         </template>
       </demo-snippet>
 
+      <h2>Audio</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-audio:fast-forward"></iron-icon>
+          <iron-icon icon="mdi-audio:pause"></iron-icon>
+          <iron-icon icon="mdi-audio:pause-circle"></iron-icon>
+          <iron-icon icon="mdi-audio:pause-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-audio:play"></iron-icon>
+          <iron-icon icon="mdi-audio:play-circle"></iron-icon>
+          <iron-icon icon="mdi-audio:play-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-audio:quality-high"></iron-icon>
+          <iron-icon icon="mdi-audio:rewind"></iron-icon>
+          <iron-icon icon="mdi-audio:skip-next"></iron-icon>
+          <iron-icon icon="mdi-audio:skip-previous"></iron-icon>
+          <iron-icon icon="mdi-audio:stop"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Auth</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-auth:login"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>AV</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-av:camera"></iron-icon>
+          <iron-icon icon="mdi-av:camera-party-mode"></iron-icon>
+          <iron-icon icon="mdi-av:crosshairs"></iron-icon>
+          <iron-icon icon="mdi-av:crosshairs-gps"></iron-icon>
+          <iron-icon icon="mdi-av:file-music"></iron-icon>
+          <iron-icon icon="mdi-av:flash"></iron-icon>
+          <iron-icon icon="mdi-av:flash-auto"></iron-icon>
+          <iron-icon icon="mdi-av:flash-off"></iron-icon>
+          <iron-icon icon="mdi-av:library-music"></iron-icon>
+          <iron-icon icon="mdi-av:music-box"></iron-icon>
+          <iron-icon icon="mdi-av:music-box-outline"></iron-icon>
+        </template>
+      </demo-snippet>
+
       <h2>Logo</h2>
       <demo-snippet>
         <template>
