--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -4,4 +4,7 @@
 <link rel="import" href="mdi-alert-iconset-svg.html">
 <link rel="import" href="mdi-arrange-iconset-svg.html">
 <link rel="import" href="mdi-arrow-iconset-svg.html">
+<link rel="import" href="mdi-audio-iconset-svg.html">
+<link rel="import" href="mdi-auth-iconset-svg.html">
+<link rel="import" href="mdi-av-iconset-svg.html">
 <link rel="import" href="mdi-logo-iconset-svg.html">
