Added battery, bell, border and box iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -273,6 +273,96 @@
         </template>
       </demo-snippet>
 
+      <h2>Battery</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-battery:battery"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-20"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-30"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-40"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-60"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-80"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-90"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-alert"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-charging-100"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-charging-20"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-charging-30"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-charging-40"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-charging-60"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-charging-80"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-charging-90"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-minus"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-negative"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-outline"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-plus"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-positive"></iron-icon>
+          <iron-icon icon="mdi-battery:battery-unknown"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Bell</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-bell:bell"></iron-icon>
+          <iron-icon icon="mdi-bell:bell-off"></iron-icon>
+          <iron-icon icon="mdi-bell:bell-outline"></iron-icon>
+          <iron-icon icon="mdi-bell:bell-ring"></iron-icon>
+          <iron-icon icon="mdi-bell:bell-sleep"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Border</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-border:border-all"></iron-icon>
+          <iron-icon icon="mdi-border:border-bottom"></iron-icon>
+          <iron-icon icon="mdi-border:border-color"></iron-icon>
+          <iron-icon icon="mdi-border:border-horizontal"></iron-icon>
+          <iron-icon icon="mdi-border:border-inside"></iron-icon>
+          <iron-icon icon="mdi-border:border-left"></iron-icon>
+          <iron-icon icon="mdi-border:border-none"></iron-icon>
+          <iron-icon icon="mdi-border:border-outside"></iron-icon>
+          <iron-icon icon="mdi-border:border-right"></iron-icon>
+          <iron-icon icon="mdi-border:border-top"></iron-icon>
+          <iron-icon icon="mdi-border:border-vertical"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Box</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-box:blogger"></iron-icon>
+          <iron-icon icon="mdi-box:camcorder-box"></iron-icon>
+          <iron-icon icon="mdi-box:camcorder-box-off"></iron-icon>
+          <iron-icon icon="mdi-box:contrast-box"></iron-icon>
+          <iron-icon icon="mdi-box:drawing-box"></iron-icon>
+          <iron-icon icon="mdi-box:facebook-box"></iron-icon>
+          <iron-icon icon="mdi-box:file-document-box"></iron-icon>
+          <iron-icon icon="mdi-box:file-excel-box"></iron-icon>
+          <iron-icon icon="mdi-box:file-pdf-box"></iron-icon>
+          <iron-icon icon="mdi-box:file-powerpoint-box"></iron-icon>
+          <iron-icon icon="mdi-box:file-presentation-box"></iron-icon>
+          <iron-icon icon="mdi-box:file-word-box"></iron-icon>
+          <iron-icon icon="mdi-box:github-box"></iron-icon>
+          <iron-icon icon="mdi-box:google-plus-box"></iron-icon>
+          <iron-icon icon="mdi-box:heart-box"></iron-icon>
+          <iron-icon icon="mdi-box:image"></iron-icon>
+          <iron-icon icon="mdi-box:instagram"></iron-icon>
+          <iron-icon icon="mdi-box:linkedin"></iron-icon>
+          <iron-icon icon="mdi-box:minus-box"></iron-icon>
+          <iron-icon icon="mdi-box:music-box"></iron-icon>
+          <iron-icon icon="mdi-box:music-box-outline"></iron-icon>
+          <iron-icon icon="mdi-box:pine-tree-box"></iron-icon>
+          <iron-icon icon="mdi-box:pinterest"></iron-icon>
+          <iron-icon icon="mdi-box:plus-box"></iron-icon>
+          <iron-icon icon="mdi-box:poll-box"></iron-icon>
+          <iron-icon icon="mdi-box:settings-box"></iron-icon>
+          <iron-icon icon="mdi-box:tumblr"></iron-icon>
+          <iron-icon icon="mdi-box:twitter"></iron-icon>
+          <iron-icon icon="mdi-box:zip-box"></iron-icon>
+        </template>
+      </demo-snippet>
+
       <h2>Logo</h2>
       <demo-snippet>
         <template>
