--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -7,4 +7,8 @@
 <link rel="import" href="mdi-audio-iconset-svg.html">
 <link rel="import" href="mdi-auth-iconset-svg.html">
 <link rel="import" href="mdi-av-iconset-svg.html">
+<link rel="import" href="mdi-battery-iconset-svg.html">
+<link rel="import" href="mdi-bell-iconset-svg.html">
+<link rel="import" href="mdi-border-iconset-svg.html">
+<link rel="import" href="mdi-box-iconset-svg.html">
 <link rel="import" href="mdi-logo-iconset-svg.html">
