Added camera, cart, circle and clothing iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -363,6 +363,74 @@
         </template>
       </demo-snippet>
 
+      <h2>Camera</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-camera:camera-timer"></iron-icon>
+          <iron-icon icon="mdi-camera:cloud"></iron-icon>
+          <iron-icon icon="mdi-camera:contrast-box"></iron-icon>
+          <iron-icon icon="mdi-camera:contrast-circle"></iron-icon>
+          <iron-icon icon="mdi-camera:flash"></iron-icon>
+          <iron-icon icon="mdi-camera:flash-auto"></iron-icon>
+          <iron-icon icon="mdi-camera:flash-off"></iron-icon>
+          <iron-icon icon="mdi-camera:tag-faces"></iron-icon>
+          <iron-icon icon="mdi-camera:timelapse"></iron-icon>
+          <iron-icon icon="mdi-camera:white-balance-auto"></iron-icon>
+          <iron-icon icon="mdi-camera:white-balance-incandescent"></iron-icon>
+          <iron-icon icon="mdi-camera:white-balance-iridescent"></iron-icon>
+          <iron-icon icon="mdi-camera:white-balance-sunny"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Cart</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-cart:basket"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Circle</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-circle:account-circle"></iron-icon>
+          <iron-icon icon="mdi-circle:alert-circle"></iron-icon>
+          <iron-icon icon="mdi-circle:arrow-down-bold-circle"></iron-icon>
+          <iron-icon icon="mdi-circle:arrow-down-bold-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-circle:arrow-left-bold-circle"></iron-icon>
+          <iron-icon icon="mdi-circle:arrow-left-bold-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-circle:arrow-right-bold-circle"></iron-icon>
+          <iron-icon icon="mdi-circle:arrow-right-bold-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-circle:arrow-up-bold-circle"></iron-icon>
+          <iron-icon icon="mdi-circle:arrow-up-bold-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-circle:close-circle"></iron-icon>
+          <iron-icon icon="mdi-circle:close-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-circle:contrast-circle"></iron-icon>
+          <iron-icon icon="mdi-circle:firefox"></iron-icon>
+          <iron-icon icon="mdi-circle:github-circle"></iron-icon>
+          <iron-icon icon="mdi-circle:help-circle"></iron-icon>
+          <iron-icon icon="mdi-circle:information"></iron-icon>
+          <iron-icon icon="mdi-circle:information-outline"></iron-icon>
+          <iron-icon icon="mdi-circle:minus-circle"></iron-icon>
+          <iron-icon icon="mdi-circle:minus-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-circle:pause-circle"></iron-icon>
+          <iron-icon icon="mdi-circle:pause-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-circle:play-circle"></iron-icon>
+          <iron-icon icon="mdi-circle:play-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-circle:plus-circle"></iron-icon>
+          <iron-icon icon="mdi-circle:plus-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-circle:web"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Clothing</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-clothing:tie"></iron-icon>
+          <iron-icon icon="mdi-clothing:tshirt-crew"></iron-icon>
+          <iron-icon icon="mdi-clothing:tshirt-v"></iron-icon>
+        </template>
+      </demo-snippet>
+
       <h2>Logo</h2>
       <demo-snippet>
         <template>
