--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -11,4 +11,8 @@
 <link rel="import" href="mdi-bell-iconset-svg.html">
 <link rel="import" href="mdi-border-iconset-svg.html">
 <link rel="import" href="mdi-box-iconset-svg.html">
+<link rel="import" href="mdi-camera-iconset-svg.html">
+<link rel="import" href="mdi-cart-iconset-svg.html">
+<link rel="import" href="mdi-circle-iconset-svg.html">
+<link rel="import" href="mdi-clothing-iconset-svg.html">
 <link rel="import" href="mdi-logo-iconset-svg.html">
