Added cloud, color, comment and currency iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,6 +18,15 @@
 
     <style is="custom-style" include="demo-pages-shared-styles"></style>
 
+    <style is="custom-style">
+      demo-snippet {
+        --demo-snippet-code: {
+          height: 0;
+          padding: 0;
+        };
+      }
+    </style>
+
   </head>
   <body>
 
@@ -428,6 +437,60 @@
           <iron-icon icon="mdi-clothing:tie"></iron-icon>
           <iron-icon icon="mdi-clothing:tshirt-crew"></iron-icon>
           <iron-icon icon="mdi-clothing:tshirt-v"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Cloud</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-cloud:cloud"></iron-icon>
+          <iron-icon icon="mdi-cloud:cloud-check"></iron-icon>
+          <iron-icon icon="mdi-cloud:cloud-download"></iron-icon>
+          <iron-icon icon="mdi-cloud:cloud-off-outline"></iron-icon>
+          <iron-icon icon="mdi-cloud:cloud-outline"></iron-icon>
+          <iron-icon icon="mdi-cloud:cloud-upload"></iron-icon>
+          <iron-icon icon="mdi-cloud:file-cloud"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Color</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-color:border-color"></iron-icon>
+          <iron-icon icon="mdi-color:color-helper"></iron-icon>
+          <iron-icon icon="mdi-color:contrast-box"></iron-icon>
+          <iron-icon icon="mdi-color:contrast-circle"></iron-icon>
+          <iron-icon icon="mdi-color:format-color-fill"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Comment</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-comment:comment"></iron-icon>
+          <iron-icon icon="mdi-comment:comment-account"></iron-icon>
+          <iron-icon icon="mdi-comment:comment-alert"></iron-icon>
+          <iron-icon icon="mdi-comment:comment-alert-outline"></iron-icon>
+          <iron-icon icon="mdi-comment:comment-check"></iron-icon>
+          <iron-icon icon="mdi-comment:comment-check-outline"></iron-icon>
+          <iron-icon icon="mdi-comment:comment-multiple-outline"></iron-icon>
+          <iron-icon icon="mdi-comment:comment-outline"></iron-icon>
+          <iron-icon icon="mdi-comment:comment-plus-outline"></iron-icon>
+          <iron-icon icon="mdi-comment:comment-processing"></iron-icon>
+          <iron-icon icon="mdi-comment:comment-processing-outline"></iron-icon>
+          <iron-icon icon="mdi-comment:comment-remove-outline"></iron-icon>
+          <iron-icon icon="mdi-comment:comment-text"></iron-icon>
+          <iron-icon icon="mdi-comment:comment-text-outline"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Currency</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-currency:currency-btc"></iron-icon>
+          <iron-icon icon="mdi-currency:currency-eur"></iron-icon>
+          <iron-icon icon="mdi-currency:currency-gbp"></iron-icon>
+          <iron-icon icon="mdi-currency:currency-usd"></iron-icon>
         </template>
       </demo-snippet>
 
