--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -15,4 +15,8 @@
 <link rel="import" href="mdi-cart-iconset-svg.html">
 <link rel="import" href="mdi-circle-iconset-svg.html">
 <link rel="import" href="mdi-clothing-iconset-svg.html">
+<link rel="import" href="mdi-cloud-iconset-svg.html">
+<link rel="import" href="mdi-color-iconset-svg.html">
+<link rel="import" href="mdi-comment-isonset-svg.html">
+<link rel="import" href="mdi-currency-iconset-svg.html">
 <link rel="import" href="mdi-logo-iconset-svg.html">
