Added debug and drawing iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -494,6 +494,24 @@
         </template>
       </demo-snippet>
 
+      <h2>Debug</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-debug:debug-step-into"></iron-icon>
+          <iron-icon icon="mdi-debug:debug-step-out"></iron-icon>
+          <iron-icon icon="mdi-debug:debug-step-over"></iron-icon>
+          <iron-icon icon="mdi-debug:pause-octagon"></iron-icon>
+          <iron-icon icon="mdi-debug:pause-octagon-outline"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Drawing</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-drawing:pencil"></iron-icon>
+        </template>
+      </demo-snippet>
+
       <h2>Logo</h2>
       <demo-snippet>
         <template>
