--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -19,4 +19,6 @@
 <link rel="import" href="mdi-color-iconset-svg.html">
 <link rel="import" href="mdi-comment-isonset-svg.html">
 <link rel="import" href="mdi-currency-iconset-svg.html">
+<link rel="import" href="mdi-debug-iconset-svg.html">
+<link rel="import" href="mdi-drawing-iconset-svg.html">
 <link rel="import" href="mdi-logo-iconset-svg.html">
