Added edit, error, file and filter iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -512,6 +512,44 @@
         </template>
       </demo-snippet>
 
+      <h2>Edit</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-edit:tooltip-edit"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Error</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-error:alert"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>File</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-file:file"></iron-icon>
+          <iron-icon icon="mdi-file:file-cloud"></iron-icon>
+          <iron-icon icon="mdi-file:file-delimited"></iron-icon>
+          <iron-icon icon="mdi-file:file-document"></iron-icon>
+          <iron-icon icon="mdi-file:file-excel"></iron-icon>
+          <iron-icon icon="mdi-file:file-image"></iron-icon>
+          <iron-icon icon="mdi-file:file-pdf"></iron-icon>
+          <iron-icon icon="mdi-file:file-powerpoint"></iron-icon>
+          <iron-icon icon="mdi-file:file-word"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Filter</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-filter:filter"></iron-icon>
+          <iron-icon icon="mdi-filter:filter-remove"></iron-icon>
+          <iron-icon icon="mdi-filter:filter-remove-outline"></iron-icon>
+        </template>
+      </demo-snippet>
+
       <h2>Logo</h2>
       <demo-snippet>
         <template>
