--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -21,4 +21,8 @@
 <link rel="import" href="mdi-currency-iconset-svg.html">
 <link rel="import" href="mdi-debug-iconset-svg.html">
 <link rel="import" href="mdi-drawing-iconset-svg.html">
+<link rel="import" href="mdi-edit-iconset-svg.html">
+<link rel="import" href="mdi-error-iconset-svg.html">
+<link rel="import" href="mdi-file-iconset-svg.html">
+<link rel="import" href="mdi-filter-iconset-svg.html">
 <link rel="import" href="mdi-logo-iconset-svg.html">
