Added folder, form and format iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -550,6 +550,68 @@
         </template>
       </demo-snippet>
 
+      <h2>Folder</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-folder:folder"></iron-icon>
+          <iron-icon icon="mdi-folder:folder-account"></iron-icon>
+          <iron-icon icon="mdi-folder:folder-google-drive"></iron-icon>
+          <iron-icon icon="mdi-folder:folder-image"></iron-icon>
+          <iron-icon icon="mdi-folder:folder-move"></iron-icon>
+          <iron-icon icon="mdi-folder:folder-multiple-image"></iron-icon>
+          <iron-icon icon="mdi-folder:folder-outline"></iron-icon>
+          <iron-icon icon="mdi-folder:folder-plus"></iron-icon>
+          <iron-icon icon="mdi-folder:folder-remove"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Form</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-form:check"></iron-icon>
+          <iron-icon icon="mdi-form:check-all"></iron-icon>
+          <iron-icon icon="mdi-form:checkbox-blank"></iron-icon>
+          <iron-icon icon="mdi-form:checkbox-blank-circle"></iron-icon>
+          <iron-icon icon="mdi-form:checkbox-blank-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-form:checkbox-blank-outline"></iron-icon>
+          <iron-icon icon="mdi-form:checkbox-marked"></iron-icon>
+          <iron-icon icon="mdi-form:checkbox-marked-circle"></iron-icon>
+          <iron-icon icon="mdi-form:checkbox-marked-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-form:checkbox-marked-outline"></iron-icon>
+          <iron-icon icon="mdi-form:radiobox-blank"></iron-icon>
+          <iron-icon icon="mdi-form:radiobox-marked"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Format</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-format:color-helper"></iron-icon>
+          <iron-icon icon="mdi-format:format-align-center"></iron-icon>
+          <iron-icon icon="mdi-format:format-align-justify"></iron-icon>
+          <iron-icon icon="mdi-format:format-align-left"></iron-icon>
+          <iron-icon icon="mdi-format:format-align-right"></iron-icon>
+          <iron-icon icon="mdi-format:format-bold"></iron-icon>
+          <iron-icon icon="mdi-format:format-color-fill"></iron-icon>
+          <iron-icon icon="mdi-format:format-header-1"></iron-icon>
+          <iron-icon icon="mdi-format:format-header-2"></iron-icon>
+          <iron-icon icon="mdi-format:format-header-3"></iron-icon>
+          <iron-icon icon="mdi-format:format-header-4"></iron-icon>
+          <iron-icon icon="mdi-format:format-header-5"></iron-icon>
+          <iron-icon icon="mdi-format:format-header-6"></iron-icon>
+          <iron-icon icon="mdi-format:format-header-pound"></iron-icon>
+          <iron-icon icon="mdi-format:format-line-spacing"></iron-icon>
+          <iron-icon icon="mdi-format:format-list-numbers"></iron-icon>
+          <iron-icon icon="mdi-format:format-paint"></iron-icon>
+          <iron-icon icon="mdi-format:format-paragraph"></iron-icon>
+          <iron-icon icon="mdi-format:format-striketrough"></iron-icon>
+          <iron-icon icon="mdi-format:format-subscript"></iron-icon>
+          <iron-icon icon="mdi-format:format-superscript"></iron-icon>
+          <iron-icon icon="mdi-format:format-underline"></iron-icon>
+          <iron-icon icon="mdi-format:format-wrap-inline"></iron-icon>
+        </template>
+      </demo-snippet>
+
       <h2>Logo</h2>
       <demo-snippet>
         <template>
