--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -25,4 +25,7 @@
 <link rel="import" href="mdi-error-iconset-svg.html">
 <link rel="import" href="mdi-file-iconset-svg.html">
 <link rel="import" href="mdi-filter-iconset-svg.html">
+<link rel="import" href="mdi-folder-iconset-svg.html">
+<link rel="import" href="mdi-form-iconset-svg.html">
+<link rel="import" href="mdi-format-iconset-svg.html">
 <link rel="import" href="mdi-logo-iconset-svg.html">
