Added hardware, helper and holiday iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -612,6 +612,58 @@
         </template>
       </demo-snippet>
 
+      <h2>Hardware</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-hardware:cellphone"></iron-icon>
+          <iron-icon icon="mdi-hardware:cellphone-dock"></iron-icon>
+          <iron-icon icon="mdi-hardware:harddisk"></iron-icon>
+          <iron-icon icon="mdi-hardware:headphones"></iron-icon>
+          <iron-icon icon="mdi-hardware:headphones-box"></iron-icon>
+          <iron-icon icon="mdi-hardware:headset"></iron-icon>
+          <iron-icon icon="mdi-hardware:keyboard"></iron-icon>
+          <iron-icon icon="mdi-hardware:keyboard-close"></iron-icon>
+          <iron-icon icon="mdi-hardware:laptop"></iron-icon>
+          <iron-icon icon="mdi-hardware:laptop-chromebook"></iron-icon>
+          <iron-icon icon="mdi-hardware:laptop-mac"></iron-icon>
+          <iron-icon icon="mdi-hardware:mouse"></iron-icon>
+          <iron-icon icon="mdi-hardware:nest-protect"></iron-icon>
+          <iron-icon icon="mdi-hardware:nest-thermostat"></iron-icon>
+          <iron-icon icon="mdi-hardware:printer"></iron-icon>
+          <iron-icon icon="mdi-hardware:sd"></iron-icon>
+          <iron-icon icon="mdi-hardware:server"></iron-icon>
+          <iron-icon icon="mdi-hardware:server-network"></iron-icon>
+          <iron-icon icon="mdi-hardware:server-network-off"></iron-icon>
+          <iron-icon icon="mdi-hardware:server-off"></iron-icon>
+          <iron-icon icon="mdi-hardware:sim-alert"></iron-icon>
+          <iron-icon icon="mdi-hardware:speaker"></iron-icon>
+          <iron-icon icon="mdi-hardware:speaker-off"></iron-icon>
+          <iron-icon icon="mdi-hardware:tablet"></iron-icon>
+          <iron-icon icon="mdi-hardware:watch"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Helper</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-helper:color-helper"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Holiday</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-holiday:candycane"></iron-icon>
+          <iron-icon icon="mdi-holiday:gift"></iron-icon>
+          <iron-icon icon="mdi-holiday:ornament"></iron-icon>
+          <iron-icon icon="mdi-holiday:ornament-variant"></iron-icon>
+          <iron-icon icon="mdi-holiday:pine-tree"></iron-icon>
+          <iron-icon icon="mdi-holiday:pine-tree-box"></iron-icon>
+          <iron-icon icon="mdi-holiday:snowman"></iron-icon>
+          <iron-icon icon="mdi-holiday:stocking"></iron-icon>
+        </template>
+      </demo-snippet>
+
       <h2>Logo</h2>
       <demo-snippet>
         <template>
