--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -28,4 +28,7 @@
 <link rel="import" href="mdi-folder-iconset-svg.html">
 <link rel="import" href="mdi-form-iconset-svg.html">
 <link rel="import" href="mdi-format-iconset-svg.html">
+<link rel="import" href="mdi-hardware-iconset-svg.html">
+<link rel="import" href="mdi-helper-iconset-svg.html">
+<link rel="import" href="mdi-holiday-iconset-svg.html">
 <link rel="import" href="mdi-logo-iconset-svg.html">
