Added image, local and lock iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -664,6 +664,54 @@
         </template>
       </demo-snippet>
 
+      <h2>Image</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-image:image"></iron-icon>
+          <iron-icon icon="mdi-image:message-image"></iron-icon>
+          <iron-icon icon="mdi-image:numeric-1-box-multiple-outline"></iron-icon>
+          <iron-icon icon="mdi-image:numeric-2-box-multiple-outline"></iron-icon>
+          <iron-icon icon="mdi-image:numeric-3-box-multiple-outline"></iron-icon>
+          <iron-icon icon="mdi-image:numeric-4-box-multiple-outline"></iron-icon>
+          <iron-icon icon="mdi-image:numeric-5-box-multiple-outline"></iron-icon>
+          <iron-icon icon="mdi-image:numeric-6-box-multiple-outline"></iron-icon>
+          <iron-icon icon="mdi-image:numeric-7-box-multiple-outline"></iron-icon>
+          <iron-icon icon="mdi-image:numeric-8-box-multiple-outline"></iron-icon>
+          <iron-icon icon="mdi-image:numeric-9-box-multiple-outline"></iron-icon>
+          <iron-icon icon="mdi-image:numeric-9-plus-box-multiple-outline"></iron-icon>
+          <iron-icon icon="mdi-image:tooltip-image"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Local</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-local:car-wash"></iron-icon>
+          <iron-icon icon="mdi-local:city"></iron-icon>
+          <iron-icon icon="mdi-local:crosshair"></iron-icon>
+          <iron-icon icon="mdi-local:crosshair-gps"></iron-icon>
+          <iron-icon icon="mdi-local:gas-station"></iron-icon>
+          <iron-icon icon="mdi-local:home"></iron-icon>
+          <iron-icon icon="mdi-local:hospital"></iron-icon>
+          <iron-icon icon="mdi-local:hotel"></iron-icon>
+          <iron-icon icon="mdi-local:map"></iron-icon>
+          <iron-icon icon="mdi-local:martini"></iron-icon>
+          <iron-icon icon="mdi-local:pharmacy"></iron-icon>
+          <iron-icon icon="mdi-local:store"></iron-icon>
+          <iron-icon icon="mdi-local:store-24-hour"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Lock</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-lock:lock"></iron-icon>
+          <iron-icon icon="mdi-lock:lock-open"></iron-icon>
+          <iron-icon icon="mdi-lock:lock-open-outline"></iron-icon>
+          <iron-icon icon="mdi-lock:lock-outline"></iron-icon>
+        </template>
+      </demo-snippet>
+
       <h2>Logo</h2>
       <demo-snippet>
         <template>
