--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -31,4 +31,7 @@
 <link rel="import" href="mdi-hardware-iconset-svg.html">
 <link rel="import" href="mdi-helper-iconset-svg.html">
 <link rel="import" href="mdi-holiday-iconset-svg.html">
+<link rel="import" href="mdi-image-iconset-svg.html">
+<link rel="import" href="mdi-local-iconset-svg.html">
+<link rel="import" href="mdi-lock-iconset-svg.html">
 <link rel="import" href="mdi-logo-iconset-svg.html">
